force-app/main/default/objects/Work_Order__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <length>250</length>
    <type>Text</type>
</CustomField>