force-app/main/default/objects/Work_Order__c/fields/Assign_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Project</label>
    <type>Checkbox</type>
</CustomField>