force-app/main/default/objects/Work_Order__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipName>RelatedWO</relationshipName>
    <type>Lookup</type>
</CustomField>