force-app/main/default/objects/Work_Order__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>