force-app/main/default/objects/Work_Order__c/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate</label>
    <referenceTo>Corporate__c</referenceTo>
    <relationshipName>RelatedWO</relationshipName>
    <type>Lookup</type>
</CustomField>