force-app/main/default/objects/Work_Order__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <label>Decline Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>