force-app/main/default/objects/Work_Order__c/fields/Estimate_Data__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Data__c</fullName>
    <label>Estimate Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>