force-app/main/default/objects/Work_Order__c/fields/External_WO_ID__c.field-meta.xml
<CustomField>
    <fullName>External_WO_ID__c</fullName>
    <label>External WO ID</label>
    <type>TextArea</type>
</CustomField>