force-app/main/default/objects/Work_Order__c/fields/External_WO_Provider__c.field-meta.xml
<CustomField>
    <fullName>External_WO_Provider__c</fullName>
    <label>External WO Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Channel</fullName>
            </value>
            <value>
                <fullName>FLexa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>