force-app/main/default/objects/Work_Order__c/fields/IncurredData__c.field-meta.xml
<CustomField>
    <fullName>IncurredData__c</fullName>
    <label>IncurredData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>