force-app/main/default/objects/Work_Order__c/fields/Is_Fill_In_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Is_Fill_In_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fill In Candidate</label>
    <type>Checkbox</type>
</CustomField>