force-app/main/default/objects/Work_Order__c/fields/Is_Recall__c.field-meta.xml
<CustomField>
    <fullName>Is_Recall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recall</label>
    <type>Checkbox</type>
</CustomField>