force-app/main/default/objects/Work_Order__c/fields/Original_ETA__c.field-meta.xml
<CustomField>
    <fullName>Original_ETA__c</fullName>
    <label>Estimate Time Of Arrival</label>
    <type>DateTime</type>
</CustomField>