force-app/main/default/objects/Work_Order__c/fields/Original_NTE__c.field-meta.xml
<CustomField>
    <fullName>Original_NTE__c</fullName>
    <label>Original NTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>