force-app/main/default/objects/Work_Order__c/fields/ParentWO__c.field-meta.xml
<CustomField>
    <fullName>ParentWO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>