force-app/main/default/objects/Work_Order__c/fields/Prevent_Geocoding_For_Chatter_Actions__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Geocoding_For_Chatter_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Geocoding For Chatter Actions</label>
    <type>Checkbox</type>
</CustomField>