force-app/main/default/objects/Work_Order__c/fields/Request_by_Person__c.field-meta.xml
<CustomField>
    <fullName>Request_by_Person__c</fullName>
    <label>Request by Person</label>
    <length>250</length>
    <type>Text</type>
</CustomField>