force-app/main/default/objects/Work_Order__c/fields/Select__c.field-meta.xml
<CustomField>
    <fullName>Select__c</fullName>
    <label>Select Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P2 - Priority 2 hours</fullName>
            </value>
            <value>
                <fullName>P4 - Priority 4 hours</fullName>
            </value>
            <value>
                <fullName>P8 - Priority 8 hours</fullName>
            </value>
            <value>
                <fullName>P24 - Priority 24 hours</fullName>
            </value>
            <value>
                <fullName>P48 - Priority 48 hours</fullName>
            </value>
            <value>
                <fullName>NP72 - Non Priority 72 hours</fullName>
            </value>
            <value>
                <fullName>ND8 - Next Day 8 AM</fullName>
            </value>
            <value>
                <fullName>ND10 - Next Day 10 AM</fullName>
            </value>
            <value>
                <fullName>ND2P - Next Day 2 PM</fullName>
            </value>
            <value>
                <fullName>NPW1 - Non Priority 1 Week</fullName>
            </value>
            <value>
                <fullName>NPW2 - Non Priority 2 Week</fullName>
            </value>
            <value>
                <fullName>NPM1 - Non Priority 1 Month</fullName>
            </value>
            <value>
                <fullName>NPM2 - Non Priority 2 Month</fullName>
            </value>
            <value>
                <fullName>PSM - Priority- Service - Maintenance 6 Months</fullName>
            </value>
            <value>
                <fullName>MWO - Material Work Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>