force-app/main/default/objects/Work_Order__c/fields/Service_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Completion_Date__c</fullName>
    <label>Service Completion Date</label>
    <type>Date</type>
</CustomField>