force-app/main/default/objects/Work_Order__c/fields/Submit_Auto_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_Auto_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Auto Approval</label>
    <type>Checkbox</type>
</CustomField>