force-app/main/default/objects/Work_Order__c/fields/WO_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>WO_Close_Date__c</fullName>
    <label>WO Close Date</label>
    <type>Date</type>
</CustomField>