force-app/main/default/objects/Work_Order__c/fields/WorkOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderNumber__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>WorkOrderNumber</label>
    <type>AutoNumber</type>
</CustomField>