force-app/main/default/objects/Work_Order__c/recordTypes/Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Read_Only</fullName>
    <active>true</active>
    <label>Read Only</label>
</RecordType>