force-app/main/default/objects/Work_Order__c/recordTypes/Work_Order_Record.recordType-meta.xml
<RecordType>
    <fullName>Work_Order_Record</fullName>
    <active>true</active>
    <label>Work Order Record</label>
</RecordType>