force-app/main/default/objects/Work_Order__c/recordTypes/WorkOrderRequest.recordType-meta.xml
<RecordType>
    <fullName>WorkOrderRequest</fullName>
    <active>true</active>
    <label>WorkOrderRequest</label>
</RecordType>