force-app/main/default/objects/Work_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approved_By__c</columns>
    <columns>Assign_to_Project__c</columns>
    <columns>Brand__c</columns>
    <columns>Classification__c</columns>
    <columns>Corporate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Declined_Reason__c</columns>
    <columns>Description__c</columns>
    <columns>Estimate_Time_of_Arrival__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>